Post initial test with rollout spreadsheet

--- a/Rollout.BLL/App.config
+++ b/Rollout.BLL/App.config
@@ -12,6 +12,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="JDEEntities" connectionString="metadata=res://*/JDE.csdl|res://*/JDE.ssdl|res://*/JDE.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sr02\n0e9sql01;initial catalog=JDE_DEVELOPMENT;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="JDEEntities" connectionString="metadata=res://*/JDE.csdl|res://*/JDE.ssdl|res://*/JDE.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=n0e9sql01;initial catalog=JDE_DEVELOPMENT;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
