--- a/Rollout.Common/log4net.config
+++ b/Rollout.Common/log4net.config
@@ -10,7 +10,7 @@
       </layout>
     </appender>
     <appender name="file" type="log4net.Appender.RollingFileAppender">
-      <file value="D:\\gitHub\\Rollout\\logfiles\\Rollout.Common.log" />
+      <file value="E:\\gitHub\\Rollout\\logfiles\\Rollout.Common.log" />
       <appendToFile value="true" />
       <rollingStyle value="Size" />
       <maxSizeRollBackups value="5" />
