--- a/Rollout.Common/Rollout.Common.csproj
+++ b/Rollout.Common/Rollout.Common.csproj
@@ -47,6 +47,8 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -55,6 +57,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CenterDialog.cs" />
     <Compile Include="CommonFunctions.cs" />
     <Compile Include="FileIO.cs" />
     <Compile Include="GenericCSV.cs" />
