--- a/Rollout.UI.Winform/App.config
+++ b/Rollout.UI.Winform/App.config
@@ -14,4 +14,7 @@
             <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
         </providers>
     </entityFramework>
+  <connectionStrings>
+    <add name="JDEEntities" connectionString="metadata=res://*/JDE.csdl|res://*/JDE.ssdl|res://*/JDE.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sr02\n0e9sql01;initial catalog=JDE_DEVELOPMENT;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
