Added County to z-file by looking up F0117 record using zip code

--- a/Rollout.EF/Rollout.EF.csproj
+++ b/Rollout.EF/Rollout.EF.csproj
@@ -65,6 +65,9 @@
     <Compile Include="F0101Z2.cs">
       <DependentUpon>JDE.tt</DependentUpon>
     </Compile>
+    <Compile Include="F0117.cs">
+      <DependentUpon>JDE.tt</DependentUpon>
+    </Compile>
     <Compile Include="F03012.cs">
       <DependentUpon>JDE.tt</DependentUpon>
     </Compile>
