--- a/Rollout.UI.Winform/log4net.config
+++ b/Rollout.UI.Winform/log4net.config
@@ -10,10 +10,10 @@
       </layout>
     </appender>
     <appender name="file" type="log4net.Appender.RollingFileAppender">
-      <file value="D:\\gitHub\\Rollout\\logfiles\\Rollout.log" />
+      <file value="${APPDATA}\3EControls\Rollouts\RolloutSales.log" />
       <appendToFile value="true" />
       <rollingStyle value="Size" />
-      <maxSizeRollBackups value="5" />
+      <maxSizeRollBackups value="100" />
       <maximumFileSize value="10MB" />
       <staticLogFileName value="true" />
       <layout type="log4net.Layout.PatternLayout">
