--- a/Rollout.BLL/Rollout.BLL.csproj
+++ b/Rollout.BLL/Rollout.BLL.csproj
@@ -33,6 +33,26 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug-ASP.NET|AnyCPU'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\Debug-ASP.NET\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <LangVersion>7.3</LangVersion>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release-ASP.NET|AnyCPU'">
+    <OutputPath>bin\Release-ASP.NET\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <LangVersion>7.3</LangVersion>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.4.0\lib\net45\EntityFramework.dll</HintPath>
@@ -57,6 +77,9 @@
     <Compile Include="Classes\Concept.cs" />
     <Compile Include="Classes\ConceptCSV.cs" />
     <Compile Include="Classes\ConceptLine.cs" />
+    <Compile Include="Classes\Freight.cs" />
+    <Compile Include="Classes\FreightCSV.cs" />
+    <Compile Include="Classes\FreightLine.cs" />
     <Compile Include="Interfaces\Header.cs" />
     <Compile Include="Interfaces\IStrictCSV.cs" />
     <Compile Include="JDEInterface\JDE.cs" />
@@ -65,6 +88,7 @@
     <Compile Include="Classes\ShipToCSV.cs" />
     <Compile Include="Classes\ShipToLine.cs" />
     <Compile Include="Transformations\XfrmConcept.cs" />
+    <Compile Include="Transformations\XfrmFreight.cs" />
     <Compile Include="Transformations\XfrmShipTo.cs" />
   </ItemGroup>
   <ItemGroup>
