--- a/Rollout.BLL/Rollout.BLL.csproj
+++ b/Rollout.BLL/Rollout.BLL.csproj
@@ -12,7 +12,7 @@
     <AssemblyName>Rollout.BLL</AssemblyName>
     <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <Deterministic>true</Deterministic>
+    <Deterministic>false</Deterministic>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
   </PropertyGroup>
