--- a/Rollout.Common/Rollout.Common.csproj
+++ b/Rollout.Common/Rollout.Common.csproj
@@ -12,7 +12,7 @@
     <AssemblyName>Rollout.Common</AssemblyName>
     <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <Deterministic>true</Deterministic>
+    <Deterministic>false</Deterministic>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
   </PropertyGroup>
