Updated shipment load to allow multiple packages per order

--- a/Rollout.UI.Winform/Rollout.UI.Winform.csproj
+++ b/Rollout.UI.Winform/Rollout.UI.Winform.csproj
@@ -131,6 +131,9 @@
     <EmbeddedResource Include="LoadingForm.resx">
       <DependentUpon>LoadingForm.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="..\.editorconfig">
+      <Link>.editorconfig</Link>
+    </None>
     <None Include="log4net.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
